--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ test:unit:
     - curl --location --output artifacts.zip 'https://git.perceptyx.com/api/v4/projects/331/jobs/artifacts/master/download?job=package'
       && unzip artifacts.zip
       && rm artifacts.zip
-      && cpanm *.tar.gz
+      && cpanm --verbose *.tar.gz
       && rm *.tar.gz
     - mv cpanfile cpanfile.bak
       && sed '/OpenTracing::Interface/d' cpanfile.bak > cpanfile
@@ -45,7 +45,7 @@ test:unit:
     - curl --location --output artifacts.zip 'https://git.perceptyx.com/api/v4/projects/320/jobs/artifacts/master/download?job=package'
       && unzip artifacts.zip
       && rm artifacts.zip
-      && cpanm *.tar.gz
+      && cpanm --verbose *.tar.gz
       && rm *.tar.gz
     - mv cpanfile cpanfile.bak
       && sed '/OpenTracing::Implementation::NoOp/d' cpanfile.bak > cpanfile
