update `gitlab-ci` file
- install dependencies first with cpanm

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ test:unit:
     - curl --location --output artifacts.zip 'https://git.perceptyx.com/api/v4/projects/331/jobs/artifacts/master/download?job=package'
       && unzip artifacts.zip
       && rm artifacts.zip
+      && cpanm --verbose --install-deps *.tar.gz
       && cpanm --verbose *.tar.gz
       && rm *.tar.gz
     - mv cpanfile cpanfile.bak
@@ -45,6 +46,7 @@ test:unit:
     - curl --location --output artifacts.zip 'https://git.perceptyx.com/api/v4/projects/320/jobs/artifacts/master/download?job=package'
       && unzip artifacts.zip
       && rm artifacts.zip
+      && cpanm --verbose --install-deps *.tar.gz
       && cpanm --verbose *.tar.gz
       && rm *.tar.gz
     - mv cpanfile cpanfile.bak
